# hakymi-agent

./: .env  main.py  pyproject.toml
demo/: agent_demo.py  agent_humen.py  agent_skills.py  run_agent.py
